# webchat

back-end/: .gitignore  docker-compose.yaml  manage.py  pyproject.toml
back-end/api/: routers.py
back-end/api/auth/: serializers.py  views.py
back-end/api/healthy/: views.py
back-end/config/: bootstrap.py  settings.py  urls.py
front-end/: README.md  proxy.ts  tsconfig.json
front-end/app/: layout.tsx  page.tsx
front-end/app/example/: page.tsx
